openmediavault (0.3.0.9) stable; urgency=low

  * Update locales.
  * Add help informations in WebGUI to various form fields.
  * Mantis 0000449/0000455: 3TB Seagate Barracuda st3000dm001 can not be
    partitioned properly.
  * Mantis 0000459: Service FTP shares have wrong access privileges in
    proftpd.conf

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 May 2012 18:10:39 +0200

openmediavault (0.3.0.8) stable; urgency=low

  * Fix broken user WebGUI.
  * Do not use PHP_FCGI_CHILDREN. As a result this reduces the number of PHP
    processes.
  * Mantis 0000394: Add more FTP SSL/TLS options.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 09 May 2012 15:42:30 +0200

openmediavault (0.3.0.7) stable; urgency=low

  * Update locales.
  * Request confirmation from the user before installing new plugins.
  * Disable autocompletion in login dialog.
  * Check for duplicates before storing network interface configuration
    object.
  * Mantis 0000447: Reorder login dialog fields.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2012 19:56:09 +0200

openmediavault (0.3.0.6) stable; urgency=low

  * Misc issues.
  * Update locales.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 05 May 2012 02:56:33 +0200

openmediavault (0.3.0.5) stable; urgency=low

  * Redirect rsyncd syslog messages to rsyncd.log.
  * Add ability to view rsyncd logs via WebGUI.
  * Add missing logrotate configurations for various services.
  * Do not display a request dialog when downloading files via WebGUI
    (e.g. syslog files).
  * Mantis 0000438: [Network/interfaces] Method data is missing.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Apr 2012 23:34:20 +0200

openmediavault (0.3.0.4) stable; urgency=low

  * Add ability to import groups via CSV.
  * Fix bugs related to system messages WebGUI.
  * Mantis 0000428: Allow more characters in share names. The SMB/CIFS
    file/directory naming convention is used for this.